[gd_scene load_steps=3 format=3 uid="uid://cdf7m68gxfsvb"]

[ext_resource type="Script" uid="uid://cgb2qehisgcqj" path="res://menu/MainMenu.gd" id="1_rog7y"]

[sub_resource type="Theme" id="Theme_tv1bk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rog7y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -94.0
offset_right = 138.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_tv1bk")

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Marauder"
fit_content = true

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="HostDedicated" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Dedicated"

[node name="HostCoOp" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Co-Op"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Multiplayer"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/HostDedicated" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HostCoOp" to="." method="_on_host_co_op_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
